# tool-validator

./: .gitattributes  .gitignore  README.md  main.py
documentation/: D.2021.1268.00.R04 Beschrijving Generieke XML EPG versie 4.3.docx  apartment_pdf_extracted.txt  ~$2021.1268.00.R04 Beschrijving Generieke XML EPG versie 4.3.docx
toolvalidator/: README.md  __init__.py  __main__.py  adviestool_client.py  database.py  labels.py  runner.py
xmlConverter/: README.md  README_extended.md  pyproject.toml
xmlConverter/scripts/: run_extract.ps1  run_validate.ps1
xmlConverter/src/xml_converter/: cli.py  config.py
xmlConverter/src/xml_converter/domain/: models.py
xmlConverter/src/xml_converter/extract/: api_builder.py  export_prediction_input.py  export_raw_fields.py  mapper.py  normalizer.py  raw_fields.py  xml_extractors.py
xmlConverter/src/xml_converter/io/: xml_reader.py  xsd_validator.py
xmlConverter/src/xml_converter/schemas/: README.md
xmlConverter/src/xml_converter/validate/: api_client.py  batch_runner.py  comparer.py
xmlConverter/tests/fixtures/: sample_monitorbestand.xml
xmlConverter/tests/integration/: test_api_builder_living_area.py  test_extract_pipeline.py  test_raw_extraction.py  test_xsd_validation.py
xmlConverter/tests/unit/: test_api_builder.py  test_comparer.py  test_normalizer.py  test_quarantine_rules.py
