[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "xml-converter"
version = "0.1.0"
description = "Monitorbestand XML extraction and validation tooling"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Prodalus" }
]
dependencies = [
  "lxml>=5.3.0",
  "typer>=0.12.5",
  "requests>=2.32.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.6.9",
  "mypy>=1.11.2"
]

[project.scripts]
xml-converter = "xml_converter.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
